# neural-network-from-scratch

./: .gitignore  LICENSE  README.md  gather_submission_files.ipynb  prepare_submission.sh  pyproject.toml  q1_softmax.ipynb  q2_two_layer_net.ipynb  q3_features.ipynb  q4_fully_connected_nets.ipynb  requirements.txt
csdc618_dscd604/: data_utils.py  features.py  layer_utils.py  layers.py  optim.py  solver.py
csdc618_dscd604/classifiers/: __init__.py  fc_net.py  linear_classifier.py  softmax.py
csdc618_dscd604/datasets/: get_datasets.sh
notebooks/: gather_submission_files.ipynb  q1_softmax.ipynb  q2_two_layer_net.ipynb  q3_features.ipynb  q4_fully_connected_nets.ipynb
