[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "csdc618-dscd604-assignment"
version = "0.1.0"
description = "NumPy-based neural network assignment implementation"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["csdc618_dscd604*"]
